--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <!--<a class="facebook" target="_blank" onclick="return !window.open(this.href, 'Facebook', 'width=640,height=300')" href="http://www.facebook.com/sharer/sharer.php?u=waka.com&t=waaweawea">Facebook</a>-->
-<!--<a class="facebook" target="_blank" onclick="return !window.open(this.href, 'Facebook', 'width=640,height=300')" href="http://www.facebook.com/sharer/sharer.php?u=testwak.mooo.com/index.html?prodId=222&t=waaweawea">Facebook</a>-->
+<a class="facebook" target="_blank" onclick="return !window.open(this.href, 'Facebook', 'width=640,height=300')" href="http://www.facebook.com/sharer/sharer.php?u=testwak.mooo.com/index.html?prodId=222&t=waaweawea">Facebook</a>
 
 
 <button onclick="openFbPopUp()">FB</button>
