--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html"; charset="utf-8">
 <html>
+<head>
+<meta property="og:image" content="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Green_Arrow_Right.svg/600px-Green_Arrow_Right.svg.png"/>
+<meta property="og:image:secure_url" content="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Green_Arrow_Right.svg/600px-Green_Arrow_Right.svg.png" />
+</head>
 <body>
 
 <p dir="rtl">Click the button to replace "Microsoft" with "W3Schools" in the paragraph below:</p>
