--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html"; charset="utf-8">
 <html>
 <head>
+<meta property="og:title" content="My Title. MINE!"/>
 <meta property="og:image" content="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Green_Arrow_Right.svg/600px-Green_Arrow_Right.svg.png"/>
 <meta property="og:image:secure_url" content="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Green_Arrow_Right.svg/600px-Green_Arrow_Right.svg.png" />
 </head>
