--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 <meta property="og:title" content="My Title. MINE!"/>
 <meta property="og:image" content="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Green_Arrow_Right.svg/600px-Green_Arrow_Right.svg.png"/>
 <meta property="og:image:secure_url" content="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Green_Arrow_Right.svg/600px-Green_Arrow_Right.svg.png" />
+<meta property="og:title" content="The Rock"/>
+<meta property="og:type" content="movie"/>
+<meta property="og:url" content="http://www.imdb.com/title/tt0117500/"/>
+<meta property="og:site_name" content="IMDb"/>
+<meta property="fb:admins" content="USER_ID"/>
+<meta property="og:description"
+      content="A group of U.S. Marines, under command of
+               a renegade general, take over Alcatraz and
+               threaten San Francisco Bay with biological
+               weapons."/>
 </head>
 <body>
 
