--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html"; charset="utf-8">
 <html>
 <head>
-<meta property="og:title" content="My Title. MINE!"/>
 <!--<meta property="og:image" content="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Green_Arrow_Right.svg/600px-Green_Arrow_Right.svg.png"/>
-<meta property="og:image:secure_url" content="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Green_Arrow_Right.svg/600px-Green_Arrow_Right.svg.png" />-->
-<meta property="og:title" content="The Rock"/>
-<meta property="og:type" content="movie"/>
 <meta property="og:url" content="http://www.imdb.com/title/tt0117500/"/>
-<meta property="og:site_name" content="IMDb"/>
+<meta property="og:title" content="My Title. MINE!"/>
+<meta property="og:image:secure_url" content="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Green_Arrow_Right.svg/600px-Green_Arrow_Right.svg.png" />-->
+<meta property="og:title" content="Zehava Galon"/>
+<meta property="og:type" content="movie"/>
+<meta property="og:site_name" content="AutoN"/>
 <meta property="fb:admins" content="USER_ID"/>
 <meta property="og:description" content="A group of U.S. Marines, under command of
                a renegade general, take over Alcatraz and
