--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 <div class="header">
   <h1>Muzings</h1>
-  <h2></h2>
+  <h2>Thoughts on clouds by Dror Gensler</h2>
 </div>
 
 <div class="content">
